# telliGRAM

./: CLAUDE.md  COMPATIBILITY_CLEANUP.md  DESIGN_NOTES.md  GROM.json  KNOWN_ISSUES.md  LAYERED_ANIMATION_DESIGN.md  LICENSE  PR_DESCRIPTION.md  QUICKSTART.md  README.md  debug_startup.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_basic_qt.py  test_minimal.py
.github/workflows/: ci.yml
docs/: ASSEMBLY_FORMAT.md  DEVELOPMENT_PHASES.md  GRAM_CARDS.md  GROM_JSON.md  GROM_LAYOUT.md  HARDWARE_REFERENCE.md  INTYBASIC_FORMAT.md  PROJECT_REQUIREMENTS.md  STIC_FIGURES_DESIGN.md  TDD_IMPLEMENTATION_PLAN.md  USER_WORKFLOWS.md  UX_DESIGN.md
src/telligram/: __init__.py
src/telligram/core/: animation.py  card.py  grom.py  project.py
src/telligram/gui/: main_window.py
src/telligram/gui/widgets/: card_grid.py  grom_browser.py  pixel_editor.py  timeline_editor.py
telligram/: __version__.py  main.py
telligram/core/: __init__.py  animation.py  card.py  composite.py  constants.py  grom.py  project.py  stic_figure.py
telligram/gui/: __init__.py  main_window.py
telligram/gui/commands/: stic_figure_commands.py
telligram/gui/widgets/: __init__.py  animation_composer.py  card_grid.py  color_palette.py  composite_preview.py  export_dialog.py  grom_browser.py  pixel_editor.py  stic_figures.py  timeline_editor.py  timeline_editor_new.py
tests/: conftest.py
tests/core/: test_animation.py  test_card.py  test_grom.py  test_project.py
