[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telligram"
version = "0.1.0-alpha"
description = "Intellivision GRAM Card Creator, Animator and BACKTAB/STIC Designer"
authors = [
    {name = "Andrew Potozniak", email = "vibecoder.1.z3r0@gmail.com"},
    {name = "Tyraziel", email = "tyraziel@gmail.com"},
    {name = "1.z3r0", email = "vibecoder.1.z3r0@gmail.com"}
]
license = {text = "MIT OR VCL-0.1-Experimental"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Editors",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # PySide6 version constraints based on Python version
    "PySide6>=6.2.0,<6.6.0; python_version == '3.8'",
    "PySide6>=6.2.0,<6.6.0; python_version == '3.9'",
    "PySide6>=6.2.0,<6.6.0; python_version == '3.10'",
    "PySide6>=6.4.0; python_version == '3.11'",
    "PySide6>=6.6.0; python_version == '3.12'",
    "PySide6>=6.8.0; python_version >= '3.13'",
    "tomli>=1.1.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/vibecoder-1z3r0/telliGRAM"
"Bug Tracker" = "https://github.com/vibecoder-1z3r0/telliGRAM/issues"

[project.scripts]
telligram = "telligram.main:main"
